# FC-Planner

./: .gitignore  README.md  index.html
FC-Planner/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
FC-Planner/src/active_perception/: CMakeLists.txt  package.xml
FC-Planner/src/active_perception/include/active_perception/: perception_utils.h
FC-Planner/src/active_perception/src/: perception_utils.cpp
FC-Planner/src/hierarchical_coverage_planner/: CMakeLists.txt
FC-Planner/src/hierarchical_coverage_planner/config/: traj.rviz
FC-Planner/src/hierarchical_coverage_planner/data/: MBSmore.pcd  christ.pcd  christmore.pcd  pipe.pcd
FC-Planner/src/hierarchical_coverage_planner/data/mesh/: christ.mtl
FC-Planner/src/hierarchical_coverage_planner/include/gcopter/: firi.hpp  gcopter.hpp  lbfgs_new.hpp  minco.hpp
FC-Planner/src/hierarchical_coverage_planner/include/hierarchical_coverage_planner/: hcopp.h  hcplanner.h  hcsolver.h  hctraj.h
FC-Planner/src/hierarchical_coverage_planner/include/logger_info/: logger.hpp
FC-Planner/src/hierarchical_coverage_planner/launch/: christ.launch  mbs.launch  pipe.launch  rviz.launch
FC-Planner/src/hierarchical_coverage_planner/solution/LKH/: LKH  Makefile  README.txt
FC-Planner/src/hierarchical_coverage_planner/solution/LKH/SRC/: AddCandidate.c  AdjustCandidateSet.c  AllocateStructures.c  BridgeGain.c  CandidateReport.c  ChooseInitialTour.c  CreateCandidateSet.c  CreateDelaunayCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  FindTour.c  Genetic.c  Heap.c  IsPossibleCandidate.c  LKH.c  LKHmain.c  LinKernighan.c  Makefile  MergeWithTourCLARIST.c  MergeWithTourIPT.c  NormalizeNodeList.c  PrintParameters.c  ReadCandidates.c  ReadParameters.c  ReadProblem.c  Statistics.c  WriteTour.c  gpx.c
FC-Planner/src/hierarchical_coverage_planner/solution/LKH/SRC/INCLUDE/: CLARIST.h  Delaunay.h  GainType.h  Genetic.h  Heap.h  LKH.h  Segment.h  gpx.h
FC-Planner/src/hierarchical_coverage_planner/solution/Traj/: CloudInfoChrist.txt  CloudInfoMBS.txt  CloudInfoPipe.txt  PitchCoeffChrist.txt  PitchCoeffMBS.txt  PitchCoeffPipe.txt  PositionCoeffChrist.txt  PositionCoeffMBS.txt  PositionCoeffPipe.txt  TrajInfoChrist.txt  TrajInfoMBS.txt  TrajInfoPipe.txt  YawCoeffChrist.txt  YawCoeffMBS.txt  YawCoeffPipe.txt
FC-Planner/src/hierarchical_coverage_planner/solution/global/: global.par  global.tsp  global.txt
FC-Planner/src/hierarchical_coverage_planner/solution/local/: sub_0.par  sub_0.tsp  sub_0_solution.txt  sub_1.par  sub_1.tsp  sub_10.par  sub_10.tsp  sub_10_solution.txt  sub_11.par  sub_11.tsp  sub_11_solution.txt  sub_12.par  sub_12.tsp  sub_12_solution.txt  sub_13.par  sub_13.tsp  sub_13_solution.txt  sub_14.par  sub_14.tsp  sub_14_solution.txt  sub_15.par  sub_15.tsp  sub_15_solution.txt  sub_16.par  sub_16.tsp  sub_16_solution.txt  sub_17.par  sub_17.tsp  sub_17_solution.txt  sub_1_solution.txt  sub_2.par  sub_2.tsp  sub_2_solution.txt  sub_3.par  sub_3.tsp  sub_3_solution.txt  sub_4.par  sub_4.tsp  sub_4_solution.txt  sub_5.par  (+14 more)
FC-Planner/src/hierarchical_coverage_planner/src/: hcopp.cpp  hcplanner.cpp  hcplanner_exec.cpp  hcsolver.cpp  hctraj.cpp
FC-Planner/src/path_searching/: CMakeLists.txt  package.xml
FC-Planner/src/path_searching/include/path_searching/: astar2.h  matrix_hash.h
FC-Planner/src/path_searching/src/: astar2.cpp
FC-Planner/src/plan_env/: CMakeLists.txt
FC-Planner/src/plan_env/include/plan_env/: edt_environment.h  map_ros.h  obj_predictor.h  raycast.h  sdf_map.h
FC-Planner/src/plan_env/src/: edt_environment.cpp  map_ros.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
FC-Planner/src/quadrotor_msgs/: CMakeLists.txt
FC-Planner/src/quadrotor_msgs/msg/: PolynomialMatrix.msg  PolynomialTraj.msg  PolynomialTrajGroup.msg  Trajectory.msg
FC-Planner/src/rosa/: CMakeLists.txt  README.md  package.xml
FC-Planner/src/rosa/config/: traj.rviz
FC-Planner/src/rosa/data/: MBS.pcd  camel.pcd  pipe.pcd  redbird.pcd  simplejoint.pcd  tianqin.pcd
FC-Planner/src/rosa/include/rosa/: Extra_Del.h  datawrapper.h  rosa_main.h
FC-Planner/src/rosa/launch/: christ.launch  mbs.launch  pipe.launch  redbird.launch  runman.launch  rviz.launch  simplejoint.launch  tianqin.launch
FC-Planner/src/rosa/scripts/: blender_transform.py  convert.py
FC-Planner/src/rosa/src/: Extra_Del.cpp  rosa_exec.cpp  rosa_main.cpp
FC-Planner/src/traj_utils/: CMakeLists.txt
FC-Planner/src/traj_utils/include/traj_utils/: planning_visualization.h
FC-Planner/src/traj_utils/src/: planning_visualization.cpp
FC-Planner/src/viewpoint_manager/: CMakeLists.txt  README.md
FC-Planner/src/viewpoint_manager/config/: traj.rviz  viewpoint_manager.rviz
FC-Planner/src/viewpoint_manager/include/viewpoint_manager/: skeleton_viewpoint.h  viewpoint_manager.h  viewpoint_manager_node.h
FC-Planner/src/viewpoint_manager/launch/: christ.launch  mbs.launch  normal.launch  pipe.launch  rviz.launch  rviz_normal.launch  test_demo.launch
FC-Planner/src/viewpoint_manager/resource/: office_surface.pcd
FC-Planner/src/viewpoint_manager/src/: skeleton_viewpoint.cpp  skeleton_viewpoint_node.cpp  viewpoint_manager.cpp  viewpoint_manager_node.cpp
FC-Planner/vis_tool/: README.md  param.py  render_in_traj.py
FC-Planner/vis_tool/assets/: FlightLog.txt  TrajInfo.txt
FC-Planner/vis_tool/assets/model/: MBS.mtl
